--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
   "scripts": {
   "dev": "vite",
   "build": "vite build",
-  "preview": "vite preview"
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
 },
   "eslintConfig": {
     "extends": [
