heroku please oh my god work with me

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "nodemon backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
-    
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,7 @@
   "homepage": "https://github.com/slamonander/CSE108-Final#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
