--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "homepage": "https://slamonander.github.io/CSE108-Final",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
-    "web-vitals": "^2.1.4",
     "vite": "^6.3.5",
-    "@vitejs/plugin-react": "^4.4.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite",
